--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -31,7 +31,7 @@ html[data-theme='dark'] {
   --highlight-color-1: #ec5759;
   --highlight-color-rgb: 236, 87, 89;
 
-  --primary-text-color: #C1C1C1;
+  --primary-text-color: #c1c1c1;
   --secondary-text-color: #828282;
 
   --toggle-bg-color: #fff;
